[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/Project/Map.gd" type="Script" id=1]
[ext_resource path="res://src/Project/UI/Favor.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Project/UI/DisplayHolder.gd" type="Script" id=3]
[ext_resource path="res://src/Project/UI/UnitUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Project/UI/CircleProfile.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Project/UI/PlayerMove.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Project/Point.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Project/Line.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Project/UI/Time.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Project/Battle.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Project/Lists/Events.gd" type="Script" id=11]
[ext_resource path="res://src/Project/UI/ChoiceUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://src/Project/Dungeon.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Project/UI/Inventory.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Project/UI/Section.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Project/Temple.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/Project/UI/QuickCraft.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Project/UI/QuickRepair.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/Project/UI/UICircle.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.192157, 0.32549, 0.737255, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.647059, 0.647059, 0.647059, 0.294118 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="InputEventKey" id=5]
scancode = 32

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="Map" type="Node2D"]
script = ExtResource( 1 )
Point = ExtResource( 7 )
Line = ExtResource( 8 )
Time = ExtResource( 9 )
Favor = ExtResource( 2 )
Battle = ExtResource( 10 )
Inventory = ExtResource( 15 )
ChoiceUI = ExtResource( 12 )
Dungeon = ExtResource( 14 )
Temple = ExtResource( 17 )
Section = ExtResource( 16 )
QuickCraft = ExtResource( 18 )
QuickRepair = ExtResource( 19 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 720.0
margin_bottom = 457.0
mouse_filter = 2
border_color = Color( 1, 1, 1, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftPanel" type="ColorRect" parent="."]
margin_top = 80.0
margin_right = 280.0
margin_bottom = 460.0
mouse_filter = 1
color = Color( 0, 0.478431, 0.478431, 1 )

[node name="CraftScroll" type="ScrollContainer" parent="."]
margin_top = 80.0
margin_right = 281.0
margin_bottom = 460.0
rect_clip_content = false
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CraftScroll"]
margin_right = 280.0
margin_bottom = 1000.0
rect_min_size = Vector2( 280, 1000 )
mouse_filter = 1
color = Color( 0, 0.478431, 0.478431, 1 )

[node name="RepairPanel" type="ColorRect" parent="."]
margin_left = 1000.0
margin_top = 80.0
margin_right = 1280.0
margin_bottom = 460.0
mouse_filter = 1
color = Color( 0, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepairScroll" type="ScrollContainer" parent="."]
margin_left = 999.0
margin_top = 80.0
margin_right = 1280.0
margin_bottom = 460.0
rect_clip_content = false
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="RepairScroll"]
margin_right = 280.0
margin_bottom = 1000.0
rect_min_size = Vector2( 280, 1000 )
mouse_filter = 1
color = Color( 0, 0.478431, 0.478431, 1 )

[node name="BG" type="Node2D" parent="."]
position = Vector2( 0, 455 )

[node name="Background" type="ColorRect" parent="BG"]
margin_left = -37.0
margin_top = 24.0
margin_right = 1334.0
margin_bottom = 325.0
mouse_filter = 2
color = Color( 0.113725, 0.352941, 0.270588, 1 )

[node name="Border" type="Node2D" parent="."]
position = Vector2( 0, 455 )

[node name="XPBorder" type="ColorRect" parent="Border"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 1282.0
margin_bottom = 27.0

[node name="HolderHolder" type="Node2D" parent="."]
z_index = 5

[node name="DisplayHolder" type="Node2D" parent="HolderHolder"]
script = ExtResource( 3 )
UnitUI = ExtResource( 4 )
PlayerProfile = ExtResource( 5 )
PlayerMove = ExtResource( 6 )

[node name="TownHolder" type="Node2D" parent="HolderHolder"]

[node name="ScrollContainer" type="ScrollContainer" parent="HolderHolder"]
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 460.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HolderHolder/ScrollContainer"]
margin_right = 720.0
margin_bottom = 460.0
rect_min_size = Vector2( 720, 460 )
mouse_filter = 2
color = Color( 0.215686, 0.278431, 0.54902, 1 )

[node name="LineHolder" type="Node2D" parent="HolderHolder/ScrollContainer/ColorRect"]

[node name="SectionHolder" type="Node2D" parent="HolderHolder/ScrollContainer/ColorRect"]

[node name="PointHolder" type="Node2D" parent="HolderHolder/ScrollContainer/ColorRect"]

[node name="DungeonHolder" type="Node2D" parent="HolderHolder"]

[node name="TempleHolder" type="Node2D" parent="HolderHolder"]

[node name="CornerHolder" type="Node2D" parent="HolderHolder"]

[node name="Time" type="Node2D" parent="HolderHolder/CornerHolder"]

[node name="ColorRect" type="ColorRect" parent="HolderHolder/CornerHolder/Time"]
margin_right = 280.0
margin_bottom = 80.0
mouse_filter = 2
color = Color( 0.286275, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Biome" parent="HolderHolder/CornerHolder/Time/ColorRect" instance=ExtResource( 20 )]
position = Vector2( 240, 40 )
z_index = 1

[node name="Favor" type="Node2D" parent="HolderHolder/CornerHolder"]

[node name="ColorRect" type="ColorRect" parent="HolderHolder/CornerHolder/Favor"]
margin_left = 1000.0
margin_right = 1280.0
margin_bottom = 80.0
mouse_filter = 2
color = Color( 0.286275, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boon 1" parent="HolderHolder/CornerHolder/Favor/ColorRect" instance=ExtResource( 20 )]
visible = false
position = Vector2( 142, 41 )

[node name="Boon 2" parent="HolderHolder/CornerHolder/Favor/ColorRect" instance=ExtResource( 20 )]
visible = false
position = Vector2( 46, 35 )

[node name="Boon 3" parent="HolderHolder/CornerHolder/Favor/ColorRect" instance=ExtResource( 20 )]
visible = false
position = Vector2( 238, 36 )

[node name="XPBar" type="ProgressBar" parent="."]
margin_left = -1.0
margin_top = 461.0
margin_right = 1280.0
margin_bottom = 479.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="Label" type="Label" parent="XPBar"]
margin_right = 1280.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "0/5"
align = 1

[node name="Events" type="Node2D" parent="."]
visible = false
z_index = 1
script = ExtResource( 11 )

[node name="EventDescription" type="Label" parent="Events"]
margin_left = -35.0
margin_top = 80.0
margin_right = 315.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="ColorRect" type="ColorRect" parent="Events/EventDescription"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 320.0
margin_bottom = 380.0

[node name="MoveBox" parent="Events/EventDescription" instance=ExtResource( 6 )]
visible = false
position = Vector2( 180, 70 )

[node name="Choices" type="Node2D" parent="Events"]
position = Vector2( 0, 75 )

[node name="Undo" type="Button" parent="."]
visible = false
modulate = Color( 0.984314, 0.945098, 0, 1 )
margin_left = 8.0
margin_top = 6.0
margin_right = 78.0
margin_bottom = 74.0
shortcut = SubResource( 6 )
text = "UNDO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleButton" type="Button" parent="."]
visible = false
modulate = Color( 0.984314, 0.945098, 0, 1 )
margin_left = 122.0
margin_top = 390.0
margin_right = 230.0
margin_bottom = 458.0
shortcut = SubResource( 6 )
text = "BATTLE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="BattleButton" to="." method="_on_BattleButton_pressed"]
